[package]
name = "rsomics-peak-count"
version = "0.1.0"
description = "Count BAM reads per BED peak region — ChIP-seq/ATAC-seq QC and quantification"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-peak-count"
path = "src/main.rs"

[lib]
name = "rsomics_peak_count"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-intervals = { path = "../../../foundation/rsomics-intervals", version = "0.1" }
clap.workspace = true
noodles = { workspace = true, features = ["sam", "bam"] }

[lints]
workspace = true
