[package]
name = "rsomics-peak-count"
version = "0.1.1"
description = "Count BAM reads per BED peak region — ChIP-seq/ATAC-seq QC and quantification"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-peak-count"
path = "src/main.rs"

[lib]
name = "rsomics_peak_count"
path = "src/lib.rs"

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-intervals = { version = "0.1" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["sam", "bam"]  }

